# promnesia

./: .dockerignore  .gitignore  .gitmodules  CHANGELOG.org  FILES_CREATED.md  IMPLEMENTATION_GUIDE.md  LICENSE  README.md  README.org  SUMMARY.md  TODO.org  build.sh  ci.sh  circle.sh  config.py.example  conftest.py  convert.py  dev-requirements.txt  docker-compose.yaml  extra_indexers.py  flow  generate  github-issues.org  lint.sh  mypy.ini  pyproject.toml  pytest.ini  release  ruff.toml  run  run_test  setup.cfg  setup.py  setup_server  shell  sources.md  test.py  test_local.py  tox.ini  ty.toml
.ci/: end2end_tests.Dockerfile  github-ci-compat  release  release-uv  run
.ci/end2end/: .dockerignore  Dockerfile  build_and_run.sh
.ci/end2end/scripts/: build_and_run_tests.sh  setup_chrome.sh  setup_firefox.sh  setup_node.sh
.ci/fake-systemd/: systemctl
.circleci/: config.yml
.github/ISSUE_TEMPLATE/: end2end_test_improvement.md
.github/workflows/: main.yml
benchmarks/: 20231115.org
ci/: github-ci-compat  run-github-locally
data/: indexer-config.py.example
doc/: DEVELOPMENT.org  END2END_TEST_IMPROVEMENTS.md  GUIDE.org  PRIVACY.org  SOURCES.org  TROUBLESHOOTING.org  addons-mozilla-org.org  config.py
docker/: .gitignore  Dockerfile  README.md  docker-compose.yaml  get-some-data.sh  indexer-config.py.example  indexer-entrypoint.sh  init.sh  start.sh
docker/docker_files/: Dockerfile  Dockerfile-indexer  docker-compose.yaml  indexer-config.py.example  indexer-entrypoint.sh
extension/: .babelrc  .eslintrc.js  .flowconfig  MANUAL-TESTS.org  README.md  TODO.org  amo-metadata.json  babel.config.cjs  babel.config.js  background.js  build  common.js  eslint.config.js  flow  generate_manifest.js  jest.config.cjs  jest.config.js  js_shared.js  lint  manifest.json  normalise.js  options.js  package-lock.json  package.json  patcher.js  popup.html  popup.js  prepare-extension.sh  rollup.config.js  sign  tsconfig.json  update-shallalist  webpack.config.js
extension/.ci/: build
extension/__mocks__/: browser.js  dom-form-serializer.js  uint8array-extras.js
extension/flow-typed/: webextension-polyfill.js
extension/images/: generate
extension/old/: webpack.config.js
extension/old/flow-typed/: webextension-polyfill.js
extension/shallalist/: COPYRIGHT  README.md  last.updated
extension/shallalist/webmail/: domains
extension/src/: api.js  api.ts  async_chrome.js  background.js  background.ts  background_chrome_mv2.js  background_injector.js  blacklist.js  common.js  common.ts  compat.ts  darkmode.ts  display.js  display.ts  filterlist.js  filterlist.ts  manifest.json  mobile_sidebar_injector.html  mobile_sidebar_injector.js  normalise.js  normalise.ts  notifications.js  notifications.ts  options.html  options.js  options.ts  options_page.css  options_page.html  options_page.js  options_page.ts  popup.html  popup.js  search.html  search.js  search.ts  selenium_bridge.js  showvisited.css  showvisited.js  sidebar-outer.css  sidebar.css  (+6 more)
extension/tests/: anchorme.test.js  common.test.js  defensify.test.js  integration.test.js  linkify.test.js  sum.js  sum.test.js  test.html
scripts/: backup-chrome-history-db.py  backup-history-db.py  backup-phone-history.sh  browser_history.py  changes.py  compare-intermediate.py  compare.py  linksdb.py  populate-browser-history.py  promnesia  release  report.py
scripts/ci/: extension  run
scripts/merge-chrome-db/: merge.sh  merge_all.sh
scripts/merge-db/: merge-chrome.sh
server/: normalise.py  setup  wereyouhere_server.py
src/: wereyouhere
src/promnesia/: __init__.py  __init__.pyi  __main__.py  cannon.py  cannon_rules.py  common.py  compare.py  compat.py  config.py  dump.py  extract.py  kjson.py  logging.py  normalise.py  promnesia_server.py  py37.py  read_db.py  server.py  sqlite.py
src/promnesia/database/: common.py  dump.py  load.py
src/promnesia/indexers/: auto.py  custom.py  fbmessenger.py  guess.py  html.py  hypothesis.py  instapaper.py  org.py  plaintext.py  pocket.py  reddit.py  shellcmd.py  takeout.py  telegram.py  twitter.py  vcs.py  website.py
src/promnesia/kython/: __init__.py  kimport.py  kjq.py  kjson.py  klogging2.py  kompress.py
src/promnesia/misc/: config_example.py  install_server.py
src/promnesia/sources/: auto.py  auto_logseq.py  auto_obsidian.py  browser.py  browser_legacy.py  browser_new.py  browser_old.py  demo.py  fbmessenger.py  filetypes.py  github.py  guess.py  hackernews.py  hpi.py  html.py  hypothesis.py  instapaper.py  logseq.py  markdown.py  obsidian.py  org.py  plaintext.py  pocket.py  reddit.py  reddit_new.py  roamresearch.py  rss.py  shellcmd.py  signal.py  smscalls.py  stackexchange.py  takeout.py  takeout_legacy.py  telegram.py  telegram_legacy.py  telegram_new.py  twitter.py  vcs.py  viber.py  viber_desktop.py  (+2 more)
src/promnesia/tests/: common.py  utils.py  (+12 more)
src/wereyouhere/: __main__.py  common.py  config.py  wereyouhere_server.py
testdata/: test_config.py  weird.txt
testdata/auto/: pocket.json
testdata/custom/: file1.txt
testdata/normalise/: ff.txt
tests/: END2END_README.md  addon.py  addon_helper.py  browser_helper.py  cannon.py  cli.py  common.py  config_tests.py  conftest.py  conftest_end2end.py  convert_screencast.py  demos.py  end2end_test.py  end2end_test_refactored_example.py  end2end_wait_utils.py  firefox_helper.py  imports.py  indexer_test.py  install_and_run  integration_test.py  record.py  server_test.py  test_auto_indexer.py  test_config.py  test_end2end.py  test_misc.py  test_org_indexer.py  test_traverse.py  utils.py  webdriver_utils.py
tests/testdata/: test_config.py  weird.txt
wereyouhere/: __main__.py  common.py  config.py  config_helper.py  dump.py  js_shared.py  normalise.py  py37.py  render.py  requirements-dev.txt  requirements.txt  wereyouhere_server.py
wereyouhere/extractors/: browser.py  chrome.py  custom.py  firefox.py  hypothesis.py  takeout.py  telegram.py
wereyouhere/extrators/: chrome.py  hypothesis.py
wereyouhere/generator/: __init__.py  chrome.py  custom.py  plaintext.py  smart.py  takeout.py
wereyouhere/indexers/: reddit.py
(+32 files in other folders)
