# see https://github.com/karlicoss/pymplate for up-to-date reference
[project]
dynamic = ["version"]  # version is managed by build backend
name = "promnesia"
dependencies = [
    "platformdirs",       # for portable user directories detection
    "tzlocal",            # guessling local timezone
    "more_itertools",
    "typing-extensions",
    "sqlalchemy>=2.0",    # DB api

    ##
    # NOTE: ideally we don't need to install them by default?
    # i.e. server and indexer can run on different hosts/containers etc
    # keeping here for backwards compatibility for now
    "promnesia[indexer]",
    "promnesia[server]",
    ##
]
requires-python = ">=3.12"

## these are only useful for pypi
description = "Enhancement of your browsing history"  # shows on project page/in search
readme      = {file = "README.org", content-type = "text/plain"}
license     = {file = "LICENSE"}
authors     = [{name = "Dima Gerasimov (@karlicoss)", email = "karlicoss@gmail.com"}]
maintainers = [{name = "Dima Gerasimov (@karlicoss)", email = "karlicoss@gmail.com"}]

[project.urls]  # pypi will fetch some github stats/link, so somewhat useful
Homepage = "https://github.com/karlicoss/promnesia"
##


[project.optional-dependencies]
indexer = [
    # indexer only dependencies
    "urlextract",
]
server = [
    # server only dependencies
    "fastapi",
    "uvicorn[standard]",
]
optional = [
    # dependencies that bring some bells & whistles
    "logzero"     ,  # pretty colored logging
    "python-magic",  # better mimetype decetion
]
HPI = [
    # dependencies for https://github.com/karlicoss/HPI
    "HPI",  # pypi version
    # TODO add notes how to override with github version?
]
html = [
    # dependencies for sources.html
    "beautifulsoup4",  # extracting links from the page
    "lxml"          ,  # bs4 backend
]
markdown = [
    # dependencies for sources.html
    "mistletoe",
]
org = [
    # dependencies for sources.org
    "orgparse>=0.3.0",
]
telegram = [
    # used to depend on 'dataset', keeping for backwards compatibility
]
all = [
    "promnesia[indexer,server,optional,HPI,html,markdown,org]",
]

[dependency-groups]
# TODO: not sure, on the one hand could just use 'standard' dev dependency group
# On the other hand, it's a bit annoying that it's always included by default?
# To make sure it's not included, need to use `uv run --exact --no-default-groups ...`
testing = [
    "pytest",
    "ruff",

    "hypothesis",

    "psutil",
    "requests",

    # NOTE: markdown is only used for test_cli... might be nice to decouple
    "promnesia[markdown]",
]
testing-all = [
    "promnesia[all]",

    { include-group = "testing" },
]
testing-end2end = [
    "selenium",   # browser automations
    "loguru",     # used in addon_helper... not sure if should just use promnesia's logger?
    "click",      # confirmations for end2end test
    "pyautogui",  # for keyboard automation during end2end tests
    "ipdb"     ,  # optional but a bit nicer for breakpoints

    "pytest-timeout",  # for PYTEST_TIMEOUT env variable
    "pytest-xdist"  ,  # not used atm, but helpful to parallelise end2end tests
    "pytest-repeat" ,  # helpful to debug flaky tests

    { include-group = "testing-all" },
]
typecheck = [
    "mypy",
    "lxml", # for mypy html coverage
    "ty",

    "types-requests",
    "types-psutil",

    "promnesia[optional]",

    { include-group = "testing" },
]
typecheck-all = [
    "types-PyAutoGUI",

    { include-group = "typecheck" },
    { include-group = "testing-end2end" },
]


[build-system]
requires = ["hatchling", "hatch-vcs"]
build-backend = "hatchling.build"

# unfortunately have to duplicate project name here atm, see https://github.com/pypa/hatch/issues/1894
[tool.hatch.build.targets.wheel]
packages = ["src/promnesia"]

[tool.hatch.version]
source = "vcs"

[tool.hatch.version.raw-options]
version_scheme = "python-simplified-semver"
local_scheme = "dirty-tag"


[project.scripts]
promnesia = "promnesia.__main__:main"

[tool.mypy]
pretty = true
show_error_context = true
show_error_end = true

# see https://mypy.readthedocs.io/en/stable/error_code_list2.html
## NOTE: strict implies all of these.. will gradually move onto it
strict = false # TODO enable later
check_untyped_defs = true
warn_redundant_casts = true
strict_equality = true
warn_unused_ignores = true
##
enable_error_code = [
    "deprecated",
    "redundant-expr",
    "possibly-undefined",
    "truthy-bool",
    "truthy-iterable",
    "ignore-without-code",
    "unused-awaitable",
]

# not sure why mypy started discovering it (since 0.800??)
[[tool.mypy.overrides]]
module = "hypothesis"
ignore_missing_imports = true

[tool.ty.src]
exclude = [
   "config.py",
   "tests/testdata/",
]

[tool.ruff]
line-length = 120  # impacts import sorting

lint.extend-select = [
    "ALL",
]

lint.ignore = [
    "CPY",   # copyright headers
    "D",     # annoying nags about docstrings
    "N",     # pep naming
    "TCH",   # type checking rules, mostly just suggests moving imports under TYPE_CHECKING
    "S",     # bandit (security checks) -- tends to be not very useful, lots of nitpicks
    "DTZ",   # datetimes checks -- complaining about missing tz and mostly false positives
    "FIX",   # complains about fixmes/todos -- annoying
    "TD",    # complains about todo formatting -- too annoying
    "ANN",   # missing type annotations? seems way to strict though
    "EM" ,   # suggests assigning all exception messages into a variable first... pretty annoying

### too opinionated style checks
    "E203",  # whitespace before , -- sometimes used for readability, and ruff format should cover it anyway
    "E221",  # multiple spaces before operator -- also covered by ruff format
    "E266",  # too many leading '#' for block comment -- sometimes genuinely useful for visual separation
    "E501",  # too long lines
    "E731",  # assigning lambda instead of using def
    "E741",  # Ambiguous variable name: `l`
    "E742",  # Ambiguous class name: `O
    "E401",  # Multiple imports on one line
    "F403",  # import *` used; unable to detect undefined names
###

###
    "E722",  # Do not use bare `except` ## Sometimes it's useful for defensive imports and that sort of thing..
    "F811",  # Redefinition of unused  # this gets in the way of pytest fixtures (e.g. in cachew)

## might be nice .. but later and I don't wanna make it strict
    "E402",  # Module level import not at top of file

### these are just nitpicky, we usually know better
    "PLR0911",  # too many return statements
    "PLR0912",  # too many branches
    "PLR0913",  # too many function arguments
    "PLR0915",  # too many statements
    "PLR1714",  # consider merging multiple comparisons
    "PLR2044",  # line with empty comment
    "PLR5501",  # use elif instead of else if
    "PLR2004",  # magic value in comparison -- super annoying in tests
###
    "PLR0402",  # import X.Y as Y -- TODO maybe consider enabling it, but double check

    "B009",  # calling gettattr with constant attribute -- this is useful to convince mypy
    "B010",  # same as above, but setattr
    "B017",  # pytest.raises(Exception)
    "B023",  # seems to result in false positives?

    # complains about useless pass, but has sort of a false positive if the function has a docstring?
    # this is common for click entrypoints (e.g. in __main__), so disable
    "PIE790",

    # a bit too annoying, offers to convert for loops to list comprehension
    # , which may heart readability
    "PERF401",

    # suggests no using exception in for loops
    # we do use this technique a lot, plus in 3.11 happy path exception handling is "zero-cost"
    "PERF203",

    "RET504", # unnecessary assignment before returning -- that can be useful for readability
    "RET505", # unnecessary else after return -- can hurt readability

    "PLC1901",  # suggests using `if string` instead of `strinig == ""` -- dumb.

    "PLW0603",  # global variable update.. we usually know why we are doing this
    "PLW2901",  # for loop variable overwritten, usually this is intentional

    "PT011",  # pytest raises is too broad

    "COM812",  # trailing comma missing -- mostly just being annoying with long multiline strings

    "TRY003",  # suggests defining exception messages in exception class -- kinda annoying
    "TRY201",  # raise without specifying exception name -- sometimes hurts readability
    "TRY400",  # a bit dumb, and results in false positives (see https://github.com/astral-sh/ruff/issues/18070)
    "TRY401",  # redundant exception in logging.exception call? TODO double check, might result in excessive logging

    "TID252",  # Prefer absolute imports over relative imports from parent modules

    ## too annoying
    "T20",     # just complains about prints and pprints (TODO maybe consider later?)
    "Q",       # flake quotes, too annoying
    "C90",     # some complexity checking
    "G004",    # logging statement uses f string
    "ERA001",  # commented out code
    "SLF001",  # private member accessed
    "BLE001",  # do not catch 'blind' Exception
    "INP001",  # complains about implicit namespace packages
    "SIM102",  # if statements collapsing, often hurts readability
    "SIM103",  # multiple conditions collapsing, often hurts readability
    "SIM105",  # suggests using contextlib.suppress instad of try/except -- this wouldn't be mypy friendly
    "SIM108",  # suggests using ternary operation instead of if -- hurts readability
    "SIM110",  # suggests using any(...) instead of for look/return -- hurts readability
    "SIM117",  # suggests using single with statement instead of nested -- doesn't work in tests
    "RSE102",  # complains about missing parens in exceptions
    ##

    "PLC0415", # "imports should be at the top level" -- not realistic

    "RUF067",  # `__init__` module should only contain docstrings and re-exports -- might be nice to aim for, but dunno

    ### project specific
    "ARG001",  # ugh, kinda annoying when using pytest fixtures
    "RUF001", "RUF002", "RUF003",  # spams about non-latin characters that we do use for testing
    "A005",  #  we're using promnesia.logging module
    "B028",  # warnings stacklevel -- will fix later
    ###
]


extend-exclude = [
    "tests/testdata/**",
]

[tool.ruff.format]
quote-style = "preserve"


[tool.pytest.ini_options]
# discover files that don't follow test_ naming. Useful to keep tests along with the source code
python_files = ["*.py"]

# this is necessary for --pyargs to discover implicit namespace packages correctly
consider_namespace_packages = true

# see https://docs.pytest.org/en/stable/reference/reference.html#confval-strict
strict = true

addopts = [
  # prevent pytest cache from being created... it craps into project dir and I never use it anyway
  "-p", "no:cacheprovider",

  # -rap to print tests summary even when they are successful
  "-rap",
  "--verbose",

  # otherwise it won't discover doctests
  "--doctest-modules",

  # show all test durations (unless they are too short)
  "--durations=0",
]

norecursedirs = ["tests/testdata/*"]

[tool.tox]
min_version = "4"

# Relies on the correct version of Python installed.
# We rely on CI for the test matrix.
env_list = ["ruff", "format", "tests-core", "tests-all", "mypy-core", "ty-core", "mypy-all", "ty-all"]
# NOTE: we don't run end2end by default since it requires elaborate setup

# https://github.com/tox-dev/tox/issues/20#issuecomment-247788333
# Hack to prevent .tox from crapping to the project directory.
work_dir = "{env:TOXWORKDIR_BASE:}{tox_root}{/}.tox"

[tool.tox.env_run_base]
pass_env = [
    # Useful for tests to know they are running under CI.
    "CI",
    "CI_*",

    # Respect user's cache dirs to prevent tox from crapping into project dir.
    "PYTHONPYCACHEPREFIX",
    "MYPY_CACHE_DIR",
    "RUFF_CACHE_DIR",

    "MY_CONFIG",
]

# Do not add current working directory to PYTHONPATH.
# Generally this is more robust and safer, and prevents weird issues later on.
set_env.PYTHONSAFEPATH = "1"
runner = "uv-venv-lock-runner"
uv_sync_locked = false

[tool.tox.env.ruff]
skip_install = true
dependency_groups = ["testing"]
commands = [
    [
        "{env_python}", "-m", "ruff",
        "check",
        { replace = "posargs", default = [], extend = true },
    ],
]


[tool.tox.env.format]
skip_install = true
dependency_groups = ["testing"]
commands = [
    [
        "{env_python}", "-m", "ruff",
        "format",
        "--check",
        { replace = "posargs", default = [], extend = true },
    ],
]


# just the very core tests with minimal dependencies
[tool.tox.env.tests-core]
dependency_groups = ["testing"]
commands = [
    [
        # posargs allow test filtering, e.g. tox ... -- -k test_name
        "{env_python}", "-m", "pytest",
        "--pyargs", "{[project]name}",
        # note: sources are tested in tests-all
        "--ignore", "src/promnesia/sources",
        "--ignore", "src/promnesia/tests/sources",
        { replace = "posargs", default = [], extend = true },
    ],
]

[tool.tox.env.tests-all]
dependency_groups = ["testing-all"]
commands = [
    # used in some tests
    [
        "{env_python}", "-m", "my.core",
        "module",
        "install",
        "my.google.takeout.parser",
        "my.hypothesis",
    ],

    [
        "{env_python}", "-m", "pytest",
        "--pyargs", "{[project]name}",
        { replace = "posargs", default = [], extend = true },
    ],
]

[tool.tox.env.end2end]
pass_env = [
    # useful for tests to know they are running under ci
    "CI",
    "CI_*",

    # respect user's cache dirs to prevent tox from crapping into project dir
    "PYTHONPYCACHEPREFIX",
    "MYPY_CACHE_DIR",
    "RUFF_CACHE_DIR",

    "MY_CONFIG",

    "DISPLAY",    # needed to launch browser
    "XAUTHORITY", # for pyautogui -- see https://stackoverflow.com/questions/48103873/pip3-install-pyautogui-error-code-1
]
# for some reason pytest struggles to discover tests otherwise?
# unless we add (even if empty) conftest.py and __init__.py files
set_env.PYTHONSAFEPATH = ""
set_env.PYTEST_TIMEOUT = "120"
dependency_groups = ["testing-end2end"]
commands = [
    ["{env_python}", "-m", "my.core", "module", "install", "my.hypothesis"],

    [
        "{env_python}", "-m", "pytest",
        "--pyargs",
        "tests.test_end2end",
        { replace = "posargs", default = [], extend = true },
    ],
]

[tool.tox.env.mypy-core]
dependency_groups = ["typecheck"]
commands = [
    [
        "{env_python}", "-m", "mypy",
        # note: sources are tested separately, below
        "-p", "{[project]name}",
        "--exclude", "sources/*",
        # uncomment if you need coverage
        # "--txt-report" , ".coverage.mypy",
        # "--html-report", ".coverage.mypy",
        { replace = "posargs", default = [], extend = true },
    ],
]


[tool.tox.env.ty-core]
# had some weird failures on windows only? skip for now
platform = "^(?!win32).*$"
dependency_groups = ["typecheck"]
commands = [
    [
        "{env_python}", "-m", "ty",
        "check", "src",
        "--exclude", "**/sources/",
        { replace = "posargs", default = [], extend = true },
    ],
]

[tool.tox.typecheck-shared]
hpi_modules = [
    "my.browser.export",
    "my.fbmessenger",
    "my.github.ghexport",
    "my.google.takeout.parser",
    "my.hypothesis",
    "my.instapaper",
    "my.pocket",
    "my.reddit",
]


[tool.tox.env.mypy-all]
dependency_groups = ["typecheck-all"]
commands = [
    [
        "{env_python}", "-m", "my.core",
        "module",
        "install",
        { replace = "ref", of = ["tool", "tox", "typecheck-shared", "hpi_modules"], extend = true },
    ],

    [
        "{env_python}", "-m", "mypy",
        "-p", "{[project]name}",
        # uncomment if you need coverage
        # "--txt-report" , ".coverage.mypy-all",
        # "--html-report", ".coverage.mypy-all",
        { replace = "posargs", default = [], extend = true },
    ],

    [
        # ugh. a bit crap to run it separately
        # but first will need to move tests inside the package if we want otherwise?
        # and I recall it was problematic at times..
        "{env_python}", "-m", "mypy",
        "-p", "tests",
        "--exclude", "testdata/*",
        { replace = "posargs", default = [], extend = true },
    ],
]

[tool.tox.env.ty-all]
dependency_groups = ["typecheck-all"]
commands = [
    [
        "{env_python}", "-m", "my.core",
        "module",
        "install",
        { replace = "ref", of = ["tool", "tox", "typecheck-shared", "hpi_modules"], extend = true },
    ],

    [
        "{env_python}", "-m", "ty",
        "check",
        { replace = "posargs", default = [], extend = true },
    ],
]
