[metadata]
name = wereyouhere
description = TODO FIXME
author = Dima Gerasimov
author-email = karlicoss@gmail.com
license = mit
long-description = file: README.md
long-description-content-type = text/markdown; charset=UTF-8
url = https://github.com/pyscaffold/pyscaffold/ # TODO FIXME
platforms = any
# https://pypi.python.org/pypi?%3Aaction=list_classifiers
# TODO FIXME
classifiers =
    Development Status :: 4 - Beta

    Programming Language :: Python
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7

[options]
zip_safe = False
packages = find:
include_package_data = True
package_dir =
    =src
# DON'T CHANGE THE FOLLOWING LINE! IT WILL BE UPDATED BY PYSCAFFOLD!
setup_requires = pyscaffold>=3.2a0,<3.3a0
# Add here dependencies of your project (semicolon/line-separated), e.g.
install_requires =
    pytz
    hug # server
    pyjq # json extraction
    sqlalchemy # DB api
    cachew@git+https://github.com/karlicoss/cachew.git@master # caching
    python-magic # for detecting mime types
    logzero

    kython@git+https://github.com/karlicoss/kython.git@master # misc (TODO vendorise)
    typing_extensions
    dateparser
    getch

# The usage of test_requires is discouraged, see `Dependency Management` docs
# tests_require = pytest; pytest-cov
# Require a specific Python version, e.g. Python 2.7 or >= 3.4
# python_requires = >=2.7,!=3.0.*,!=3.1.*,!=3.2.*,!=3.3.*

[options.packages.find]
where = src
exclude =
    tests

[options.extras_require]
# Add here test requirements (semicolon/line-separated)
testing =
   pytest # TODO do we still need it in requirements-dev??
   pytest-xdist
   selenium


# [test]
# # py.test options when running `python setup.py test`
# # addopts = --verbose
# extras = True

[tool:pytest]
python_files = *.py # TODO not sure?
addopts =
    -n auto # parallel execution; TODO how to make sure it's not runnning when run manually??
    --verbose
    --doctest-modules
norecursedirs =
    dist
    build
    .tox
testpaths = tests
# TODO ??

[aliases]
dists = bdist_wheel

[bdist_wheel]
# Use this option if your package is pure-python
universal = 1

[build_sphinx]
source_dir = docs
build_dir = docs/_build

# TODO what's that?
[devpi:upload]
# Options for the devpi: PyPI server and packaging tool
# VCS export must be deactivated since we are using setuptools-scm
no-vcs = 1
formats = bdist_wheel
